# QFontIcon

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  doxybook.json
doc/: reference.md
example/: fonts.qrc  main.cpp
include/: QFontIcon  awesome.h  bootstrap.h  qfonticon.h
scripts/: generate_bs.py  generate_fa.py  generate_md.py  helpers.py
src/: awesome.cpp  bootstrap.cpp  qfonticon.cpp
